--- a/CHANGES
+++ b/CHANGES
@@ -34,6 +34,10 @@ Version
 - Improved the models for curves 25519 and 448 in the ProVerif
   library of cryptographic primitives, to be closer to what
   CryptoVerif does.
+- Added a way to prove the security properties using exactly
+  the same syntax as for specifying assumptions on primitives:
+  to prove "equiv LHS <=(P)=> RHS", replace the final process
+  with "query_equiv LHS <=(?)=> RHS".
 - Added command "success simplify".
 - Added setting elsefindFactsInSuccessSimplify.
 - Added commands "tag t" and "undo t".
