--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 This file summarizes the most important changes between versions
 of the cryptographic protocol verifier.
 
-Version
+Version 2.02
 
 - Revised the conditions for eliminating collisions:
     - incompatible change: set minAutoCollElim = size<n> becomes
