equiv special for ICM and SPRP; minor corrections to equiv special for ROM, PRF, PRP
equiv special for ICM and SPRP

minor corrections to equiv special for ROM, PRF, PRP:
- allow key in any position in PRF/ROM
- removed useless identifiers y, z for prp
- omit lengths when types are bounded
- count all calls to f (including those in collision oracles) in the difference
of probability between PRP and PRF (application of the PRF/PRP switching lemma).

--- a/CHANGES
+++ b/CHANGES
@@ -4,10 +4,11 @@ of the cryptographic protocol verifier.
 Version
 
 - The game equivalences used in crypto transformations for
-  ROM, PRF, and PRP are now generated on-demand by CryptoVerif.
+  ROM, PRF, PRP, SPRP, and ICM are now generated on-demand by CryptoVerif.
   That allows more flexibility to optimize these equivalences.
   (See the documentation for equiv...special and the cryptographic
-  library macros ROM_hash*, PRF*, and PRP_cipher in the manual.)
+  library macros ROM_hash*, PRF*, PRP_cipher, SPRP_cipher, ICM_cipher
+  in the manual.)
 - Added command-line option -oequiv <filename> which appends
   the generated special equivalences to <filename>.
 - Added interactive commands show_equiv <crypto_args> to display
